# point-label-sharing

./: .gitignore  Makefile  README.md  app.py  client.py  pyproject.toml  regex_match.py  replace.py  requirements.txt  scan.py  split.py  static  swagger.json  trim.py
backend/: app.py  client.py  db.json  regex_match.py  remove.py  replace.py  trim.py
container/: Dockerfile  build.sh  scan.sh
data.mortardata.org/: index.html  site.css
frontend/: package.json
frontend/src/: helper.js  index.js  setupProxy.js
frontend/src/actions/: filesActions.js  index.js  rulesActions.js  templatesActions.js  types.js
frontend/src/components/: App.js  Dashboard.js  Dialogs.js  EnhancedTable.js  FormDialog.js  MiniDrawer.js  SimpleSelect.js
frontend/src/components/tool_dialogs/: RangeSlider.js  RegexDialogContent.js  RemoveDialogContent.js  ReplaceDialogContent.js  SimpleTable.js  SplitDialogContent.js  TrimDialogContent.js
frontend/src/datasets/davis/: ACAD.csv  AMRL.csv  AOB4.csv  AQUA.csv  ARC.csv  ART.csv  ARTX.csv  ASMUN.csv  BIXB.csv  BRIG.csv  BWFP.csv  Bainer.csv  C113.csv  CHEM.csv  CHEMX.csv  CONT.csv  COWL.csv  CRUS.csv  CURR.csv  DH.csv  EPS.csv  FDPD.csv  GBSF.csv  GHA_ICS.csv  GIEDT.csv  GILM.csv  HART.csv  HICK.csv  HUNT.csv  HUTCH.csv  HWC.csv  JUNGER.csv  KERR.csv  KING.csv  KLEIBER.csv  LFH.csv  LSA.csv  MADDY.csv  MANN.csv  MATH.csv  (+47 more)
frontend/src/datasets/random/: hybrid.csv
frontend/src/reducers/: errorsReducer.js  filesReducer.js  index.js  rulesReducer.js  templatesReducer.js
pointscan/: app.py  regex.py  scan.py  split.py
